[package]
name = "stream-eventify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project-lite = "0.2.9"
tokio = { version = "1.22.0", default-features = false }
tokio-stream = { version = "0.1.11", default-features = false }

[dev-dependencies]
tokio = { version = "1.22.0", default-features = false, features = ["test-util", "rt", "macros"] }
tokio-test = "0.4.2"
